# magik

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEMAP.md  README.md  build-fast.sh  check.md  justfile  pre-release.sh  status_text.json.example-set  status_text.json.example-set.NOTES.md
code-rs/app-server/: Cargo.toml
code-rs/app-server-protocol/: BUILD.bazel  Cargo.toml
code-rs/app-server-protocol/schema/json/: ApplyPatchApprovalParams.json  ApplyPatchApprovalResponse.json  ClientRequest.json  CommandExecutionRequestApprovalParams.json  CommandExecutionRequestApprovalResponse.json  DynamicToolCallParams.json  EventMsg.json  ExecCommandApprovalParams.json  ExecCommandApprovalResponse.json  FileChangeRequestApprovalParams.json  FuzzyFileSearchResponse.json  JSONRPCMessage.json  JSONRPCRequest.json  ServerNotification.json  ServerRequest.json  ToolRequestUserInputParams.json  codex_app_server_protocol.schemas.json
code-rs/app-server-protocol/schema/json/v1/: AddConversationListenerParams.json  AddConversationSubscriptionResponse.json  ArchiveConversationParams.json  ArchiveConversationResponse.json  AuthStatusChangeNotification.json  CancelLoginChatGptParams.json  CancelLoginChatGptResponse.json  ExecOneOffCommandParams.json  ExecOneOffCommandResponse.json  ForkConversationParams.json  ForkConversationResponse.json  GetAuthStatusParams.json  GetAuthStatusResponse.json  GetConversationSummaryParams.json  GetConversationSummaryResponse.json  GetUserAgentResponse.json  GetUserSavedConfigResponse.json  GitDiffToRemoteParams.json  GitDiffToRemoteResponse.json  InitializeParams.json  InitializeResponse.json  InterruptConversationParams.json  InterruptConversationResponse.json  ListConversationsParams.json  ListConversationsResponse.json  LoginApiKeyParams.json  LoginApiKeyResponse.json  LoginChatGptCompleteNotification.json  LoginChatGptResponse.json  LogoutChatGptResponse.json  NewConversationParams.json  NewConversationResponse.json  RemoveConversationListenerParams.json  RemoveConversationSubscriptionResponse.json  ResumeConversationParams.json  ResumeConversationResponse.json  SendUserMessageParams.json  SendUserMessageResponse.json  SendUserTurnParams.json  SendUserTurnResponse.json  (+4 more)
code-rs/app-server-protocol/schema/json/v2/: AccountRateLimitsUpdatedNotification.json  AccountUpdatedNotification.json  AppListUpdatedNotification.json  (+56 more)
code-rs/app-server-protocol/schema/typescript/: ExitedReviewModeEvent.ts  GhostCommit.ts  McpListToolsResponseEvent.ts  McpServerFailure.ts  McpServerFailurePhase.ts  ParsedCommand.ts  RateLimitWindow.ts  ResponseItem.ts  ReviewRequest.ts  ReviewSnapshotInfo.ts  SandboxPolicy.ts  TokenUsageInfo.ts  UpdatePlanArgs.ts  index.ts
code-rs/app-server-protocol/src/: experimental_api.rs  export.rs  jsonrpc_lite.rs  lib.rs  schema_fixtures.rs
code-rs/app-server-protocol/src/protocol/: common.rs  mappers.rs  mod.rs  thread_history.rs  v1.rs  v2.rs
code-rs/app-server-protocol/tests/: schema_fixtures.rs
code-rs/app-server/src/: code_message_processor.rs  lib.rs  main.rs  message_processor.rs  outgoing_message.rs  transport.rs
code-rs/app-server/tests/: binary_smoke.rs  websocket_parity.rs
code-rs/git-tooling/: Cargo.toml
code-rs/git-tooling/src/: lib.rs
(+290 files in other folders)
