[package]
name = "code-git-tooling"
version.workspace = true
edition.workspace = true
readme = "README.md"

[lib]
name = "code_git_tooling"
path = "src/lib.rs"

[dependencies]
tempfile = "3"
thiserror = "2"
walkdir = "2"
schemars = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ts-rs = { workspace = true, features = ["serde-json-impl", "no-serde-warnings"] }

[lints]
workspace = true

[dev-dependencies]
pretty_assertions = "1.4.1"
